﻿1.2
===

New Features:

  * Allow the table of contents to be hidden via a "show/hide" link.
  * Move hard-coded HTML to template files to allow simpler customization of
    images, table of contents, and other elements.
  * Remove ability to automatically upgrade from versions prior to 1.0.
  * Upgrade to commons-lang 3.0.1.

Bugfixes:

  * None.

Translation Updates:

  * None.


1.1.1
=====

New Features:

  * None.

Bugfixes:

  * Spring security 3.0 change how logout redirection is handled.  Update
    JAMWiki to redirect logout properly.  Note that this change modifies
    the applicationContext-security.xml file.  Reported by Leonardo Silva Kury
    Aragão Mendes.

Translation Updates:

  * None.


1.1
===

New Features:

  * Support blocking specific users and IP addresses from editing and uploading
    via the new Special:Block, Special:Unblock and Special:BlockList pages.
  * Add optional reCAPTCHA (http://www.google.com/recaptcha) support for
    combatting spam on the Special:Account and Special:Edit pages using CAPTCHA
    challenge-response.
  * Add a honeypot input, similar to Mediawiki, to help deter spambots.
  * Add support for the Mediawiki <gallery> tag for generating image galleries.
  * Add a "Filter search results by namespace" option to the Special:Search
    page.
  * Improve search performance, exclude redirects from search indexing, and
    weight topic names more heavily than topic content to improve accuracy.
    Existing JAMWiki installs should rebuild their search index using the
    tools on the Special:Maintenance page.
  * Update the editing toolbar with new look & feel and new functions.
  * Add a "View Source" tab to allow users who do not have permission to edit
    a topic to view its wiki markup.
  * Add the ability for sysadmins to permanently delete topic versions from the
    Special:Manage page.  Requested by Tan-Vinh Nguyen.
  * Allow viewing of deleted topic versions from the Special:Manage page.